# n-body

./: Cargo.toml
resources/shaders/coloured_vertices/: shader.frag  shader.vert
resources/shaders/model_shader/: shader.frag
resources/shaders/shader_2d/: shader.frag  shader.vert
src/: camera.rs  main.rs  modelutils.rs  natu.rs  object.rs  shaderutils.rs
src/modelutils/: file_parser.rs
