[package]
name = "natu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'unwind'

[dependencies]
gl = "0.14.0"
glfw = "0.54.0"
image = "0.24.8"
itertools = "0.12.1"
nalgebra = "0.32.3"
rand = "0.8.5"
sdl2-sys = "0.36.0"
